[gd_scene load_steps=8 format=2]

[ext_resource path="res://entities/player/player.gd" type="Script" id=1]
[ext_resource path="res://sprite/player/PlayerRed_Frame_01_png_processed.png" type="Texture" id=2]
[ext_resource path="res://assets/sound/sfx_laser1.ogg" type="AudioStream" id=3]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform vec4 flash_color : hint_color = vec4(1.0);
uniform float flash_modifier : hint_range(0.0, 1.0) = 0.0;

void fragment() {
	vec4 color = texture(TEXTURE, UV);
	color.rgb = mix(color.rgb, flash_color.rgb, flash_modifier);
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/flash_color = Color( 0.85098, 0.203922, 0.0784314, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 20 )

[sub_resource type="Animation" id=4]
resource_name = "hit_flash"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 0.0 ]
}

[node name="Player" type="KinematicBody2D"]
material = SubResource( 2 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
use_parent_material = true
texture = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="ShootingPoint" type="Position2D" parent="."]
position = Vector2( 0, -45 )

[node name="FireRateTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="HitTimer" type="Timer" parent="."]
one_shot = true

[node name="Shoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hit_flash = SubResource( 4 )
